gen/gramaticaParser.py
# Generated from /Users/filipealvessampaio/Documents/UFPI/compiladores/trabalho_final/gramatica.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class gramaticaParser ( Parser ):

    grammarFileName = "gramatica.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'main'", "'('", "')'", "'{'", "'}'", 
                     "';'", "','", "'const'", "'='", "'for'", "'+'", "'-'", 
                     "'||'", "'&&'", "'>'", "'<'", "'<='", "'>='", "'=='", 
                     "'!='", "'*'", "'/'", "'while'", "'if'", "'else'", 
                     "'print'", "'input'", "'return'", "<INVALID>", "'!'", 
                     "<INVALID>", "'break'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "TIPO", "NOT", "BOOL", "BREAK", "INT", 
                      "REAL", "COMP", "STRING", "ID", "WS", "COMMENT_ONE_LINE", 
                      "COMMENT_MULT_LINE" ]

    RULE_prog = 0
    RULE_main = 1
    RULE_bloco = 2
    RULE_blocoFuncs = 3
    RULE_declaraVars = 4
    RULE_declaraFuncoes = 5
    RULE_funcao_for = 6
    RULE_incremento = 7
    RULE_expressao = 8
    RULE_termo = 9
    RULE_termo2 = 10
    RULE_termo3 = 11
    RULE_termo4 = 12
    RULE_termo5 = 13
    RULE_termo6 = 14
    RULE_fator = 15
    RULE_funcao_while = 16
    RULE_funcao_if = 17
    RULE_funcao_else = 18
    RULE_funcao_break = 19
    RULE_funcao_print = 20
    RULE_funcao_input = 21
    RULE_funcao_atribuicao = 22
    RULE_funcao_chamada = 23
    RULE_funcao_retorno = 24

    ruleNames =  [ "prog", "main", "bloco", "blocoFuncs", "declaraVars", 
                   "declaraFuncoes", "funcao_for", "incremento", "expressao", 
                   "termo", "termo2", "termo3", "termo4", "termo5", "termo6", 
                   "fator", "funcao_while", "funcao_if", "funcao_else", 
                   "funcao_break", "funcao_print", "funcao_input", "funcao_atribuicao", 
                   "funcao_chamada", "funcao_retorno" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    TIPO=29
    NOT=30
    BOOL=31
    BREAK=32
    INT=33
    REAL=34
    COMP=35
    STRING=36
    ID=37
    WS=38
    COMMENT_ONE_LINE=39
    COMMENT_MULT_LINE=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def main(self):
            return self.getTypedRuleContext(gramaticaParser.MainContext,0)


        def declaraVars(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.DeclaraVarsContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.DeclaraVarsContext,i)


        def declaraFuncoes(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.DeclaraFuncoesContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.DeclaraFuncoesContext,i)


        def getRuleIndex(self):
            return gramaticaParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = gramaticaParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 50
                    self.declaraVars() 
                self.state = 55
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==29 or _la==37:
                self.state = 56
                self.declaraFuncoes()
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 62
            self.main()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bloco(self):
            return self.getTypedRuleContext(gramaticaParser.BlocoContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_main

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain" ):
                listener.enterMain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain" ):
                listener.exitMain(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain" ):
                return visitor.visitMain(self)
            else:
                return visitor.visitChildren(self)




    def main(self):

        localctx = gramaticaParser.MainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_main)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(gramaticaParser.T__0)
            self.state = 65
            self.match(gramaticaParser.T__1)
            self.state = 66
            self.match(gramaticaParser.T__2)
            self.state = 67
            self.match(gramaticaParser.T__3)
            self.state = 68
            self.bloco()
            self.state = 69
            self.match(gramaticaParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlocoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blocoFuncs(self):
            return self.getTypedRuleContext(gramaticaParser.BlocoFuncsContext,0)


        def declaraVars(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.DeclaraVarsContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.DeclaraVarsContext,i)


        def getRuleIndex(self):
            return gramaticaParser.RULE_bloco

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloco" ):
                listener.enterBloco(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloco" ):
                listener.exitBloco(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloco" ):
                return visitor.visitBloco(self)
            else:
                return visitor.visitChildren(self)




    def bloco(self):

        localctx = gramaticaParser.BlocoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_bloco)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8 or _la==29:
                self.state = 71
                self.declaraVars()
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 77
            self.blocoFuncs()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlocoFuncsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcao_for(self):
            return self.getTypedRuleContext(gramaticaParser.Funcao_forContext,0)


        def blocoFuncs(self):
            return self.getTypedRuleContext(gramaticaParser.BlocoFuncsContext,0)


        def funcao_while(self):
            return self.getTypedRuleContext(gramaticaParser.Funcao_whileContext,0)


        def funcao_if(self):
            return self.getTypedRuleContext(gramaticaParser.Funcao_ifContext,0)


        def funcao_print(self):
            return self.getTypedRuleContext(gramaticaParser.Funcao_printContext,0)


        def funcao_input(self):
            return self.getTypedRuleContext(gramaticaParser.Funcao_inputContext,0)


        def funcao_atribuicao(self):
            return self.getTypedRuleContext(gramaticaParser.Funcao_atribuicaoContext,0)


        def funcao_chamada(self):
            return self.getTypedRuleContext(gramaticaParser.Funcao_chamadaContext,0)


        def funcao_retorno(self):
            return self.getTypedRuleContext(gramaticaParser.Funcao_retornoContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_blocoFuncs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlocoFuncs" ):
                listener.enterBlocoFuncs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlocoFuncs" ):
                listener.exitBlocoFuncs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlocoFuncs" ):
                return visitor.visitBlocoFuncs(self)
            else:
                return visitor.visitChildren(self)




    def blocoFuncs(self):

        localctx = gramaticaParser.BlocoFuncsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_blocoFuncs)
        try:
            self.state = 105
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.funcao_for()
                self.state = 80
                self.blocoFuncs()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                self.funcao_while()
                self.state = 83
                self.blocoFuncs()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 85
                self.funcao_if()
                self.state = 86
                self.blocoFuncs()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 88
                self.funcao_print()
                self.state = 89
                self.blocoFuncs()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 91
                self.funcao_input()
                self.state = 92
                self.blocoFuncs()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 94
                self.funcao_atribuicao()
                self.state = 95
                self.blocoFuncs()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 97
                self.funcao_chamada()
                self.state = 98
                self.match(gramaticaParser.T__5)
                self.state = 99
                self.blocoFuncs()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 101
                self.funcao_retorno()
                self.state = 102
                self.blocoFuncs()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaraVarsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramaticaParser.RULE_declaraVars

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DeclaraVariaveisContext(DeclaraVarsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticaParser.DeclaraVarsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TIPO(self):
            return self.getToken(gramaticaParser.TIPO, 0)
        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.ID)
            else:
                return self.getToken(gramaticaParser.ID, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaraVariaveis" ):
                listener.enterDeclaraVariaveis(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaraVariaveis" ):
                listener.exitDeclaraVariaveis(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaraVariaveis" ):
                return visitor.visitDeclaraVariaveis(self)
            else:
                return visitor.visitChildren(self)


    class DeclaraConstantesContext(DeclaraVarsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticaParser.DeclaraVarsContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def TIPO(self):
            return self.getToken(gramaticaParser.TIPO, 0)
        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.ID)
            else:
                return self.getToken(gramaticaParser.ID, i)
        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.STRING)
            else:
                return self.getToken(gramaticaParser.STRING, i)
        def REAL(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.REAL)
            else:
                return self.getToken(gramaticaParser.REAL, i)
        def BOOL(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.BOOL)
            else:
                return self.getToken(gramaticaParser.BOOL, i)
        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.INT)
            else:
                return self.getToken(gramaticaParser.INT, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaraConstantes" ):
                listener.enterDeclaraConstantes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaraConstantes" ):
                listener.exitDeclaraConstantes(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaraConstantes" ):
                return visitor.visitDeclaraConstantes(self)
            else:
                return visitor.visitChildren(self)



    def declaraVars(self):

        localctx = gramaticaParser.DeclaraVarsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declaraVars)
        self._la = 0 # Token type
        try:
            self.state = 132
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [29]:
                localctx = gramaticaParser.DeclaraVariaveisContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.match(gramaticaParser.TIPO)
                self.state = 108
                self.match(gramaticaParser.ID)
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==7:
                    self.state = 109
                    self.match(gramaticaParser.T__6)
                    self.state = 110
                    self.match(gramaticaParser.ID)
                    self.state = 115
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 116
                self.match(gramaticaParser.T__5)
                pass
            elif token in [8]:
                localctx = gramaticaParser.DeclaraConstantesContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.match(gramaticaParser.T__7)
                self.state = 118
                self.match(gramaticaParser.TIPO)
                self.state = 119
                self.match(gramaticaParser.ID)
                self.state = 120
                self.match(gramaticaParser.T__8)
                self.state = 121
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not(((_la) & ~0x3f) == 0 and ((1 << _la) & 96636764160) != 0):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==7:
                    self.state = 122
                    self.match(gramaticaParser.T__6)
                    self.state = 123
                    self.match(gramaticaParser.ID)
                    self.state = 124
                    self.match(gramaticaParser.T__8)
                    self.state = 125
                    localctx.op = self._input.LT(1)
                    _la = self._input.LA(1)
                    if not(((_la) & ~0x3f) == 0 and ((1 << _la) & 96636764160) != 0):
                        localctx.op = self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 130
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 131
                self.match(gramaticaParser.T__5)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaraFuncoesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramaticaParser.RULE_declaraFuncoes

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Funcao_com_tipo_e_vazioContext(DeclaraFuncoesContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticaParser.DeclaraFuncoesContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.ID)
            else:
                return self.getToken(gramaticaParser.ID, i)
        def bloco(self):
            return self.getTypedRuleContext(gramaticaParser.BlocoContext,0)

        def TIPO(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.TIPO)
            else:
                return self.getToken(gramaticaParser.TIPO, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncao_com_tipo_e_vazio" ):
                listener.enterFuncao_com_tipo_e_vazio(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncao_com_tipo_e_vazio" ):
                listener.exitFuncao_com_tipo_e_vazio(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncao_com_tipo_e_vazio" ):
                return visitor.visitFuncao_com_tipo_e_vazio(self)
            else:
                return visitor.visitChildren(self)



    def declaraFuncoes(self):

        localctx = gramaticaParser.DeclaraFuncoesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_declaraFuncoes)
        self._la = 0 # Token type
        try:
            localctx = gramaticaParser.Funcao_com_tipo_e_vazioContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==29:
                self.state = 134
                self.match(gramaticaParser.TIPO)
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 140
            self.match(gramaticaParser.ID)
            self.state = 141
            self.match(gramaticaParser.T__1)
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 142
                self.match(gramaticaParser.TIPO)
                self.state = 143
                self.match(gramaticaParser.ID)
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==7:
                    self.state = 144
                    self.match(gramaticaParser.T__6)
                    self.state = 145
                    self.match(gramaticaParser.TIPO)
                    self.state = 146
                    self.match(gramaticaParser.ID)
                    self.state = 151
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 154
            self.match(gramaticaParser.T__2)
            self.state = 155
            self.match(gramaticaParser.T__3)
            self.state = 156
            self.bloco()
            self.state = 157
            self.match(gramaticaParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Funcao_forContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.idx = None
            self.op = None # Token

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.ID)
            else:
                return self.getToken(gramaticaParser.ID, i)

        def expressao(self):
            return self.getTypedRuleContext(gramaticaParser.ExpressaoContext,0)


        def incremento(self):
            return self.getTypedRuleContext(gramaticaParser.IncrementoContext,0)


        def blocoFuncs(self):
            return self.getTypedRuleContext(gramaticaParser.BlocoFuncsContext,0)


        def INT(self):
            return self.getToken(gramaticaParser.INT, 0)

        def funcao_break(self):
            return self.getTypedRuleContext(gramaticaParser.Funcao_breakContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_funcao_for

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncao_for" ):
                listener.enterFuncao_for(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncao_for" ):
                listener.exitFuncao_for(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncao_for" ):
                return visitor.visitFuncao_for(self)
            else:
                return visitor.visitChildren(self)




    def funcao_for(self):

        localctx = gramaticaParser.Funcao_forContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcao_for)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(gramaticaParser.T__9)
            self.state = 160
            self.match(gramaticaParser.T__1)
            self.state = 161
            self.match(gramaticaParser.ID)
            self.state = 162
            self.match(gramaticaParser.T__8)
            self.state = 163
            localctx.op = self._input.LT(1)
            _la = self._input.LA(1)
            if not(_la==33 or _la==37):
                localctx.op = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 164
            self.match(gramaticaParser.T__5)
            self.state = 165
            self.expressao(0)
            self.state = 166
            self.match(gramaticaParser.T__5)
            self.state = 167
            self.incremento()
            self.state = 168
            self.match(gramaticaParser.T__2)
            self.state = 169
            self.match(gramaticaParser.T__3)
            self.state = 170
            self.blocoFuncs()
            self.state = 172
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 171
                self.funcao_break()


            self.state = 174
            self.match(gramaticaParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncrementoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.op = None # Token

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.ID)
            else:
                return self.getToken(gramaticaParser.ID, i)

        def INT(self):
            return self.getToken(gramaticaParser.INT, 0)

        def getRuleIndex(self):
            return gramaticaParser.RULE_incremento

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncremento" ):
                listener.enterIncremento(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncremento" ):
                listener.exitIncremento(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIncremento" ):
                return visitor.visitIncremento(self)
            else:
                return visitor.visitChildren(self)




    def incremento(self):

        localctx = gramaticaParser.IncrementoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_incremento)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.match(gramaticaParser.ID)
            self.state = 177
            self.match(gramaticaParser.T__8)
            self.state = 178
            self.match(gramaticaParser.ID)
            self.state = 179
            localctx.op = self._input.LT(1)
            _la = self._input.LA(1)
            if not(_la==11 or _la==12):
                localctx.op = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 180
            self.match(gramaticaParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.type_ = None
            self.inh_type = None


        def getRuleIndex(self):
            return gramaticaParser.RULE_expressao

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)
            self.type_ = ctx.type_
            self.inh_type = ctx.inh_type


    class Operacao_orContext(ExpressaoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticaParser.ExpressaoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expressao(self):
            return self.getTypedRuleContext(gramaticaParser.ExpressaoContext,0)

        def termo(self):
            return self.getTypedRuleContext(gramaticaParser.TermoContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperacao_or" ):
                listener.enterOperacao_or(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperacao_or" ):
                listener.exitOperacao_or(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperacao_or" ):
                return visitor.visitOperacao_or(self)
            else:
                return visitor.visitChildren(self)


    class Vai_termoContext(ExpressaoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticaParser.ExpressaoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def termo(self):
            return self.getTypedRuleContext(gramaticaParser.TermoContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVai_termo" ):
                listener.enterVai_termo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVai_termo" ):
                listener.exitVai_termo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVai_termo" ):
                return visitor.visitVai_termo(self)
            else:
                return visitor.visitChildren(self)



    def expressao(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = gramaticaParser.ExpressaoContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_expressao, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = gramaticaParser.Vai_termoContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx
